tests/bad/example-e05.rat
fn Fun (mut x: Int) -> Void {
  return;
}

fn Main () -> Void {
  Fun("napis");
  return;
}
